# Object-Oriented-Programming

./: README.md
Exam practice/Quiz/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  observer.h  participant.cpp  participant.h  participantgui.cpp  participantgui.h  presentergui.cpp  presentergui.h  question.cpp  question.h  repository.cpp  repository.h
FinalExam/: controller.cpp  controller.h  main.cpp  observer.h  participant.cpp  participant.h  participantgui.cpp  participantgui.h  participantgui.ui  practicoop.pro  presentergui.cpp  presentergui.h  presentergui.ui  question.cpp  question.h  repository.cpp  repository.h
Labs assignments/Lab10-11/: Basket.cpp  Basket.h  CMakeLists.txt  Coat.cpp  Coat.h  Controller.cpp  Controller.h  Mode_interface.cpp  Mode_interface.h  Repository.cpp  Repository.h  main.cpp
Labs assignments/Lab10-11/Files/: repository.txt
Labs assignments/Lab3-4/: CMakeLists.txt  DynamicArray.c  DynamicArray.h  controller.c  controller.h  controller_redo.c  controller_redo.h  controller_undo.c  controller_undo.h  domain.c  domain.h  main.c  repo.c  repo.h  repo_redo.c  repo_redo.h  repo_undo.c  repo_undo.h  ui.c  ui.h
Labs assignments/Lab5-6/: Basket.cpp  Basket.h  CMakeLists.txt  Coat.cpp  Coat.h  Controller.cpp  Controller.h  DynamicVectorTemplate.h  DynamicVector_basket.cpp  DynamicVector_basket.h  Repository.cpp  Repository.h  main.cpp
Labs assignments/Lab7/: Basket.cpp  Basket.h  CMakeLists.txt  Coat.cpp  Coat.h  Controller.cpp  Controller.h  Repository.cpp  Repository.h  Test.cpp  Test.h  main.cpp  repo.txt
Labs assignments/Lab7/Files and test/: repo_html_file.html
Labs assignments/Lab8/: Basket.cpp  Basket.h  CMakeLists.txt  COVER_CODE  Coat.cpp  Coat.h  Controller.cpp  Controller.h  Mode_interface.cpp  Mode_interface.h  Repository.cpp  Repository.h  Test.cpp  Test.h  compile_and_cover.sh  for_gui  long.html  main.cpp
Labs assignments/Lab8/Files and tests/untitled folder/untitled folder/untitled folder/: repo.txt   test.html
Labs assignments/Lab9/: Basket.cpp  Basket.h  CMakeLists.txt  Coat.cpp  Coat.h  Controller.cpp  Controller.h  Repository.cpp  Repository.h  Test.cpp  Test.h  compile_and_cover(1).sh  cover.sh  long.html  main.cpp
Labs assignments/Lab9/Files and test/: add+list.txt  add+list.txt   repo.txt  repo_csv_file.csv
OOP Lab Test #1/: CMakeLists.txt  Controller.cpp  Controller.h  DynamicVector.cpp  DynamicVector.h  Player.cpp  Player.h  Repository.cpp  Repository.h  main.cpp
OOP Lab Test #2/: BMI.cpp  BMI.h  BP.cpp  BP.h  CMakeLists.txt  MedicalAnalysis.cpp  MedicalAnalysis.h  Person.cpp  Person.h  main.cpp
OOP Lab Test #3/: equation.cpp  equation.h  mainwindow.cpp  repo.h  (+4 more)
(+115 files in other folders)
