cmake_minimum_required(VERSION 3.13)
project(Lab5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Lab5 main.cpp Controller.cpp Controller.h DynamicVector.cpp DynamicVector.h Repository.cpp Repository.h Coat.cpp Coat.h DynamicVectorTemplate.h Basket.cpp Basket.h DynamicVector_basket.cpp DynamicVector_basket.h)